Move error box to hand component

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -94,13 +94,13 @@
                 </div>
             </div>
 
-            <div class="col-md-8 col-lg-6 pe-2 mb-2 position-relative">
+            <div class="col-md-8 col-lg-6 pe-2 mb-2">
                 <div id="mr_tiles" class=" bg-light rounded d-flex flex-column p-3 mr-full-height">
                     <h2>Tiles</h2>
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-3 pe-lg-2 mb-2">
+            <div class="col-md-4 col-lg-3 pe-lg-2 mb-2 position-relative">
                 <div id="mr_selected_tiles" class="bg-light rounded mr-full-height d-flex flex-column p-3">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2>Hand</h2>
@@ -120,7 +120,7 @@
         </div>
 
         <!-- Footer -->
-        <footer class="page-footer font-small row bg-dark text-muted border border-secondary mt-4 p-4 g-0 rounded">
+        <footer class="page-footer font-small row bg-dark text-muted border border-secondary mt-3 p-4 g-0 rounded">
             <h5 class="text-uppercase text-md-start text-center">Mahjong Points Calculator</h5>
             <div class="text-center text-md-start collapse show" id="footerContent">
                 <div class="row">
