--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -65,28 +65,11 @@
     </div>
 
     <div class="container-xxl py-3 h-100">
-        <div class="d-md-none bg-light rounded p-3 pb-2">
-            This page is currently only optimized for tablet size screens, like an iPad. Smaller screens will look
-            strange and might not be good to handle.
-        </div>
         <div class="h-100 row g-0" id="mr_main">
             <div class="col-12 mb-2 order-first">
                 <div
                     class="bg-danger text-light rounded px-4 py-1 py-md-3 py-lg-2 py-xl-3 py-xxl-4 d-flex align-items-center justify-content-center mr-full-height">
-                    <h1 class="fw-bold">Mahjong <span class="d-none d-md-inline-block">Points</span> Calculator</h1>
-                    <!--REMOVE_LINE_FOR_PUBLISHING
-                    <div class="d-none">
-                    REMOVE_LINE_FOR_PUBLISHING -->
-                    <div class="ms-3">
-                        <span class="d-md-none">sm</span>
-                        <span class="d-none d-md-block d-lg-none">md</span>
-                        <span class="d-none d-lg-block d-xl-none">lg</span>
-                        <span class="d-none d-xl-block d-xxl-none">xl</span>
-                        <span class="d-none d-xxl-block">xxl</span>
-                    </div>
-                    <!--REMOVE_LINE_FOR_PUBLISHING
-                    </div>
-                    REMOVE_LINE_FOR_PUBLISHING -->
+                    <h1 class="fw-bold">Mahjong Points Calculator</h1>
                 </div>
             </div>
 
