--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -126,13 +126,13 @@
                         <div class="col-12 col-md-5 text-center">
                             <p class="mb-0">
                                 Find the project sources at <a href="https://github.com/noxone/mahjong-point-calculator"
-                                    target="_blank" rel="noopener">Github</a>.
+                                    target="_blank" rel="noopener" mr-no-translate>Github</a>.
                             </p>
                             <p>
                                 <a class="github-button" href="https://github.com/noxone/mahjong-point-calculator"
                                     data-color-scheme="no-preference: dark; light: dark; dark: dark;"
                                     data-icon="octicon-star" data-show-count="true"
-                                    aria-label="Star noxone/mahjong-point-calculator on GitHub">Star</a>
+                                    aria-label="Star noxone/mahjong-point-calculator on GitHub" mr-no-translate>Star</a>
                             </p>
                         </div>
                         <div class="col-12 col-md-2 text-center">
@@ -164,16 +164,16 @@
                                             <p>
                                                 The project itself as well as the sources are hosted in <a
                                                     href="https://github.com/noxone/mahjong-point-calculator"
-                                                    target="_blank" rel="noopener">Github</a>.
+                                                    target="_blank" rel="noopener" mr-no-translate>Github</a>.
                                                 The version you are currently using it built from commit ID <a
                                                     href="https://github.com/noxone/mahjong-point-calculator/tree/GIT_COMMIT_ID"
-                                                    target="_blank" rel="noopener">SHORT_COMMIT_ID</a>.
+                                                    target="_blank" rel="noopener" mr-no-translate>SHORT_COMMIT_ID</a>.
                                             </p>
                                         </div>
                                         <div class="modal-body row g-0 text-start">
                                             <div class="col-12 col-md-6">
-                                                <h5>Useful Mahjong Links</h5>
-                                                <ul class="list-unstyled">
+                                                <h6>Useful Mahjong Links</h6>
+                                                <ul class="list-unstyled" mr-no-translate>
                                                     <li><a class="rounded"
                                                             href="http://dmjl.de/mah-jongg/klassische-regeln"
                                                             target="_blank" rel="noopener">Mahjong Rules (German)</a>
@@ -190,8 +190,8 @@
                                                 </ul>
                                             </div>
                                             <div class="col-12 col-md-6">
-                                                <h5>This project is built using</h5>
-                                                <ul class="list-unstyled">
+                                                <h6>This project is built using</h6>
+                                                <ul class="list-unstyled" mr-no-translate>
                                                     <li><a class="rounded" href="https://kotlinlang.org/"
                                                             target="_blank" rel="noopener">Kotlin</a></li>
                                                     <li><a class="rounded" href="https://getbootstrap.com"
@@ -212,7 +212,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 text-center">
+                    <div class="col-12 text-center" mr-no-translate>
                         <p>
                             &copy; Copyright 2023 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
                                 Neumann</a>
