--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -83,7 +83,7 @@
                     <div id="mr_selected_tiles" class="bg-light rounded mr-full-height d-flex flex-column p-3">
                         <div class="d-flex justify-content-between align-items-center">
                             <h2>Hand</h2>
-                            <button class="btn btn-sm btn-outline-secondary d-none" id="mr_btn_undo" type="button"
+                            <button class="btn btn-sm btn-outline-secondary" id="mr_btn_undo" type="button"
                                 title="Undo">
                                 <i class="bi bi-arrow-counterclockwise"></i>
                             </button>
