deploy: c436ad72d9be8b10060a255204410d20aa58b853

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=749f259cd46588e8647b76d94a2fac89e30d61bc"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=c436ad72d9be8b10060a255204410d20aa58b853"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=749f259cd46588e8647b76d94a2fac89e30d61bc">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=749f259cd46588e8647b76d94a2fac89e30d61bc">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=749f259cd46588e8647b76d94a2fac89e30d61bc">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=c436ad72d9be8b10060a255204410d20aa58b853">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=c436ad72d9be8b10060a255204410d20aa58b853">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=c436ad72d9be8b10060a255204410d20aa58b853">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -81,7 +81,7 @@
                     <div id="mr_selected_tiles" class="bg-light rounded mr-full-height d-flex flex-column p-3">
                         <div class="d-flex justify-content-between align-items-center">
                             <h2>Hand</h2>
-                            <button class="btn btn-sm btn-outline-secondary d-none" id="mr_btn_undo" type="button"
+                            <button class="btn btn-sm btn-outline-secondary" id="mr_btn_undo" type="button"
                                 title="Undo">
                                 <i class="bi bi-arrow-counterclockwise"></i>
                             </button>
@@ -164,8 +164,8 @@
                                                     href="https://github.com/noxone/mahjong-point-calculator"
                                                     target="_blank" rel="noopener" mr-no-translate>Github</a>.
                                                 The version you are currently using it built from commit ID <a
-                                                    href="https://github.com/noxone/mahjong-point-calculator/tree/749f259cd46588e8647b76d94a2fac89e30d61bc"
-                                                    target="_blank" rel="noopener" mr-no-translate>749f259</a>.
+                                                    href="https://github.com/noxone/mahjong-point-calculator/tree/c436ad72d9be8b10060a255204410d20aa58b853"
+                                                    target="_blank" rel="noopener" mr-no-translate>c436ad7</a>.
                                             </p>
                                         </div>
                                         <div class="modal-body row g-0 text-start">
