Improve undo functionality

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -148,12 +148,6 @@
                                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
                                     data-bs-target="#footerModal">More Info</button>
                             </div>
-                            <div class="d-none">
-                                <!-- REMOVE_LINE_FOR_PUBLISHING
-                                <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"
-                                    title="Visitor Counter" />
-                                REMOVE_LINE_FOR_PUBLISHING -->
-                            </div>
 
                             <div class="modal fade" id="footerModal" data-bs-backdrop="static" tabindex="-1">
                                 <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -210,6 +204,13 @@
                                                     </li>
                                                 </ul>
                                             </div>
+                                            <div class="text-center" mr-no-translate>
+                                                <!-- REMOVE_LINE_FOR_PUBLISHING
+                                                <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23B8B8B8&title_bg=%23D9D9D9&icon=&icon_color=%23646464&title=visitors&edge_flat=false"
+                                                    title="Visitor Counter" />
+                                                REMOVE_LINE_FOR_PUBLISHING -->
+                                            </div>
+
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
