Prepare user guide

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -76,7 +76,15 @@
             <div class="col-12 col-lg-9 pb-2 row g-0">
                 <div class="col-sm-8 pe-sm-2 pb-2 pb-sm-0">
                     <div id="mr_tiles" class=" bg-light rounded d-flex flex-column p-3 mr-full-height">
-                        <h2>Tiles</h2>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2>Tiles</h2>
+                            <div class="btn-group d-none">
+                                <button class="btn btn-sm btn-outline-secondary" id="mr_btn_help" type="button"
+                                        title="Undo">
+                                    <i class="bi bi-question-circle"></i>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-4 pe-lg-2">
