--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=0a2044a10e7172a8957ddd9c07af7a1a3542a1ad"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=485bde31f692b3e6e185273ad55b98932aaacabf"></script>
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=0a2044a10e7172a8957ddd9c07af7a1a3542a1ad">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=0a2044a10e7172a8957ddd9c07af7a1a3542a1ad">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=0a2044a10e7172a8957ddd9c07af7a1a3542a1ad">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=485bde31f692b3e6e185273ad55b98932aaacabf">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=485bde31f692b3e6e185273ad55b98932aaacabf">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=485bde31f692b3e6e185273ad55b98932aaacabf">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -81,10 +81,16 @@
                     <div id="mr_selected_tiles" class="bg-light rounded mr-full-height d-flex flex-column p-3">
                         <div class="d-flex justify-content-between align-items-center">
                             <h2>Hand</h2>
-                            <button class="btn btn-sm btn-outline-secondary" id="mr_btn_undo" type="button"
-                                title="Undo">
-                                <i class="bi bi-arrow-counterclockwise"></i>
-                            </button>
+                            <div class="btn-group">
+                                <button class="btn btn-sm btn-outline-secondary" id="mr_btn_undo" type="button"
+                                        title="Undo">
+                                    <i class="bi bi-arrow-counterclockwise"></i>
+                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" id="mr_btn_redo" type="button"
+                                        title="Redo">
+                                    <i class="bi bi-arrow-clockwise"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -140,10 +146,6 @@
                                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
                                     data-bs-target="#footerModal">More Info</button>
                             </div>
-                            <div class="d-none">
-                                <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23372929&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"
-                                    title="Visitor Counter" />
-                            </div>
 
                             <div class="modal fade" id="footerModal" data-bs-backdrop="static" tabindex="-1">
                                 <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -164,8 +166,8 @@
                                                     href="https://github.com/noxone/mahjong-point-calculator"
                                                     target="_blank" rel="noopener" mr-no-translate>Github</a>.
                                                 The version you are currently using it built from commit ID <a
-                                                    href="https://github.com/noxone/mahjong-point-calculator/tree/0a2044a10e7172a8957ddd9c07af7a1a3542a1ad"
-                                                    target="_blank" rel="noopener" mr-no-translate>0a2044a</a>.
+                                                    href="https://github.com/noxone/mahjong-point-calculator/tree/485bde31f692b3e6e185273ad55b98932aaacabf"
+                                                    target="_blank" rel="noopener" mr-no-translate>485bde3</a>.
                                             </p>
                                         </div>
                                         <div class="modal-body row g-0 text-start">
@@ -200,6 +202,11 @@
                                                     </li>
                                                 </ul>
                                             </div>
+                                            <div class="text-center" mr-no-translate>
+                                                <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmahjong.olafneumann.org&count_bg=%23B8B8B8&title_bg=%23D9D9D9&icon=&icon_color=%23646464&title=visitors&edge_flat=false"
+                                                    title="Visitor Counter" />
+                                            </div>
+
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
