Prepare Multiplayer component

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -79,17 +79,11 @@
                     <div class="flex-fill align-self-center text-center">
                         <h1 class="fw-bold">Mahjong Points Calculator</h1>
                     </div>
-                    <!--<div class="align-self-center">
-                        <button class="btn btn-danger border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Multiple Players</button>
-                    </div>-->
+                    <div class="align-self-center">
+                        <button id="mr_btn_multiplayer" class="btn btn-danger border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Multiple Players</button>
+                    </div>
                 </div>
             </div>
-
-            <!--<div class="col-12 order-first">
-                <div class="bg-success text-light rounded py-1 mb-2">
-                    <button>abc</button>
-                </div>
-            </div>-->
 
             <div class="col-12 col-lg-9 pb-2 row g-0">
                 <div class="col-sm-8 pe-sm-2 pb-2 pb-sm-0">
