--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -80,7 +80,7 @@
                         <h1 class="fw-bold">Mahjong Points Calculator</h1>
                     </div>
                     <div class="align-self-center">
-                        <button id="mr_btn_multiplayer" class="btn btn-danger border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Multiple Players</button>
+                        <button id="mr_btn_multiplayer" class="btn btn-danger border" type="button">Multiple Players</button>
                     </div>
                 </div>
             </div>
