Rename session component

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -120,7 +120,7 @@
 
             <div class="col-12 col-md-9 col-lg-3 row g-0 pe-md-2 pe-lg-0 pb-2">
                 <div class="col-sm-4 col-md-4 col-lg-12 pe-0 pe-sm-2 pe-lg-0 pb-2 pb-sm-0 pb-lg-2">
-                    <div id="mr_wind" class="bg-light rounded mr-full-height d-flex flex-column p-3">
+                    <div id="mr_session" class="bg-light rounded mr-full-height d-flex flex-column p-3">
                         <!--<h2>Wind</h2>-->
                     </div>
                 </div>
