--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=92a8dd3d813cc4517306217f3ebd2ee0e4dc8bf5">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=92a8dd3d813cc4517306217f3ebd2ee0e4dc8bf5">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=92a8dd3d813cc4517306217f3ebd2ee0e4dc8bf5">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=c823f7b47e3ba7cf0c723865468eda8566efefa2">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=c823f7b47e3ba7cf0c723865468eda8566efefa2">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=c823f7b47e3ba7cf0c723865468eda8566efefa2">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -171,8 +171,8 @@
                                                     href="https://github.com/noxone/mahjong-points-calculator-web"
                                                     target="_blank" rel="noopener" mr-no-translate>Github</a>.
                                                 The version you are currently using it built from commit ID <a
-                                                    href="https://github.com/noxone/mahjong-points-calculator-web/tree/92a8dd3d813cc4517306217f3ebd2ee0e4dc8bf5"
-                                                    target="_blank" rel="noopener" mr-no-translate>92a8dd3</a>.
+                                                    href="https://github.com/noxone/mahjong-points-calculator-web/tree/c823f7b47e3ba7cf0c723865468eda8566efefa2"
+                                                    target="_blank" rel="noopener" mr-no-translate>c823f7b</a>.
                                             </p>
                                         </div>
                                         <div class="modal-body row g-0 text-start">
@@ -224,7 +224,7 @@
                     </div>
                     <div class="col-12 text-center" mr-no-translate>
                         <p>
-                            &copy; Copyright 2023 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
+                            &copy; undefined-2024Copyright 2023 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
                                 Neumann</a>
                         </p>
                     </div>
@@ -244,7 +244,7 @@
         crossorigin="anonymous"></script>
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=92a8dd3d813cc4517306217f3ebd2ee0e4dc8bf5"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=c823f7b47e3ba7cf0c723865468eda8566efefa2"></script>
 </body>
 
 </html>
