--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -228,7 +228,7 @@
                     </div>
                     <div class="col-12 text-center" mr-no-translate>
                         <p>
-                            &copy; undefined-2024Copyright 2023 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
+                            &copy; Copyright 2023-2024 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
                                 Neumann</a>
                         </p>
                     </div>
