--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=0816efe2503f60aa77068dec820d5bff199b2e4e">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=0816efe2503f60aa77068dec820d5bff199b2e4e">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=0816efe2503f60aa77068dec820d5bff199b2e4e">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=b12f0e9638bc97ff23f8262ead4d41e95b481f91">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=b12f0e9638bc97ff23f8262ead4d41e95b481f91">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=b12f0e9638bc97ff23f8262ead4d41e95b481f91">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -171,8 +171,8 @@
                                                     href="https://github.com/noxone/mahjong-points-calculator-web"
                                                     target="_blank" rel="noopener" mr-no-translate>Github</a>.
                                                 The version you are currently using it built from commit ID <a
-                                                    href="https://github.com/noxone/mahjong-points-calculator-web/tree/0816efe2503f60aa77068dec820d5bff199b2e4e"
-                                                    target="_blank" rel="noopener" mr-no-translate>0816efe</a>.
+                                                    href="https://github.com/noxone/mahjong-points-calculator-web/tree/b12f0e9638bc97ff23f8262ead4d41e95b481f91"
+                                                    target="_blank" rel="noopener" mr-no-translate>b12f0e9</a>.
                                             </p>
                                         </div>
                                         <div class="modal-body row g-0 text-start">
@@ -224,7 +224,7 @@
                     </div>
                     <div class="col-12 text-center" mr-no-translate>
                         <p>
-                            &copy; undefined-2024Copyright 2023 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
+                            &copy; Copyright 2023-2024 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
                                 Neumann</a>
                         </p>
                     </div>
@@ -244,7 +244,7 @@
         crossorigin="anonymous"></script>
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=0816efe2503f60aa77068dec820d5bff199b2e4e"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=b12f0e9638bc97ff23f8262ead4d41e95b481f91"></script>
 </body>
 
 </html>
