--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- now for our page -->
-    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=381929b5af56ba27f5562fedd388e2ec7a2029f2">
-    <link rel="stylesheet" href="styles/tiles.css?commitId=381929b5af56ba27f5562fedd388e2ec7a2029f2">
-    <link rel="stylesheet" href="styles/fonts.css?commitId=381929b5af56ba27f5562fedd388e2ec7a2029f2">
+    <link rel="stylesheet" href="styles/mahjong-points.css?commitId=4df157416a97f316902eb58a4f1b30228283b814">
+    <link rel="stylesheet" href="styles/tiles.css?commitId=4df157416a97f316902eb58a4f1b30228283b814">
+    <link rel="stylesheet" href="styles/fonts.css?commitId=4df157416a97f316902eb58a4f1b30228283b814">
     <title>Mahjong Point Calculator</title>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -171,8 +171,8 @@
                                                     href="https://github.com/noxone/mahjong-points-calculator-web"
                                                     target="_blank" rel="noopener" mr-no-translate>Github</a>.
                                                 The version you are currently using it built from commit ID <a
-                                                    href="https://github.com/noxone/mahjong-points-calculator-web/tree/381929b5af56ba27f5562fedd388e2ec7a2029f2"
-                                                    target="_blank" rel="noopener" mr-no-translate>381929b</a>.
+                                                    href="https://github.com/noxone/mahjong-points-calculator-web/tree/4df157416a97f316902eb58a4f1b30228283b814"
+                                                    target="_blank" rel="noopener" mr-no-translate>4df1574</a>.
                                             </p>
                                         </div>
                                         <div class="modal-body row g-0 text-start">
@@ -224,7 +224,7 @@
                     </div>
                     <div class="col-12 text-center" mr-no-translate>
                         <p>
-                            &copy; Copyright 2023-2024 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
+                            &copy; 2023-2025 <a href="https://olafneumann.org" target="_blank" rel="noopener">Olaf
                                 Neumann</a>
                         </p>
                     </div>
@@ -244,7 +244,7 @@
         crossorigin="anonymous"></script>
 
     <!-- sources of regex generator -->
-    <script type="text/javascript" src="mahjong-points.js?commitId=381929b5af56ba27f5562fedd388e2ec7a2029f2"></script>
+    <script type="text/javascript" src="mahjong-points.js?commitId=4df157416a97f316902eb58a4f1b30228283b814"></script>
 </body>
 
 </html>
